# schwek_movie_booking_bot

./: Cargo.toml
src/: main.rs  movie.rs  scraper.rs  telegram.rs
