[package]
name = "schwek_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.22"
colored = "2.0.4"
scraper = "0.18.1"